Move torrent parameter from query to path #19
