# src/api/stream.ts
@@ -2,7 +2,8 @@ import pump from 'pump'
 import rangeParser from 'range-parser'
 import { Express } from 'express'
 import { Logger } from 'winston'
-import { Forbidden, NotFound } from 'http-errors'
+import { Forbidden, NotFound, BadRequest } from 'http-errors'
+import { stringify } from 'querystring'
 
 import { TorrentClient, findFile } from '../services/torrent-client'
 import { Config } from '../config'
@@ -15,33 +16,37 @@ export function setupStreamApi(
     _logger: Logger,
     client: TorrentClient
 ): Express {
-    app.get<{}, {}, {}, Record<'torrent' | 'file' | 'token' | 'fileType' | 'fileIndex', unknown>>(
-        '/stream',
+    app.get<{ torrent: string }, {}, {}, Record<'file' | 'fileType' | 'fileIndex', unknown>>(
+        '/stream/:torrent(*)',
         async (req, res) => {
             const encodeToken = config.security.streamApi.key || config.security.apiKey
 
+            // If security is enabled, require encoded torrent with JWT
             const data = encodeToken
                 ? verifyJwtToken<Record<'torrent' | 'file' | 'fileType' | 'fileIndex', unknown>>(
-                      validateString(req.query.token, 'token'),
+                      req.params.torrent,
                       encodeToken,
                       config.security.streamApi.maxAge
                   )
-                : req.query
+                : {
+                      ...req.query,
+                      torrent: req.params.torrent,
+                  }
 
             if (!data) {
-                throw new Forbidden()
+                throw new Forbidden('Incorrect JWT encoding')
             }
 
-            const link = validateString(data.torrent, 'torrent')
+            if (encodeToken && Object.values(req.query).some((v) => !!v)) {
+                throw new BadRequest(`All parameters should be encoded with JWT`)
+            }
 
-            const torrent = await client.addTorrent(link)
+            const torrent = await client.addTorrent(validateString(data.torrent, 'torrent'))
 
             const file = findFile(torrent.files, {
-                file: 'file' in data ? validateString(data.file, 'file') : undefined,
-                fileIndex:
-                    'fileIndex' in data ? validateInt(data.fileIndex, 'fileIndex') : undefined,
-                fileType:
-                    'fileType' in data ? validateString(data.fileType, 'fileType') : undefined,
+                file: data.file ? validateString(data.file, 'file') : undefined,
+                fileIndex: data.fileIndex ? validateInt(data.fileIndex, 'fileIndex') : undefined,
+                fileType: data.fileType ? validateString(data.fileType, 'fileType') : undefined,
             })
 
             if (!file) {
@@ -78,6 +83,28 @@ export function setupStreamApi(
             })
         }
     )
+
+    app.get('/stream', async (req, res) => {
+        const torrent =
+            'token' in req.query
+                ? validateString(req.query.token, 'token')
+                : validateString(req.query.torrent, 'torrent')
+
+        return res.redirect(
+            `/stream/${encodeURIComponent(torrent)}?${stringify({
+                file: 'file' in req.query ? validateString(req.query.file, 'file') : undefined,
+                fileIndex:
+                    'fileIndex' in req.query
+                        ? validateInt(req.query.fileIndex, 'fileIndex')
+                        : undefined,
+                fileType:
+                    'fileType' in req.query
+                        ? validateString(req.query.fileType, 'fileType')
+                        : undefined,
+            })}`,
+            301
+        )
+    })
 
     return app
 }
